plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

repositories {
    mavenCentral()
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.44'
    annotationProcessor 'org.projectlombok:lombok:1.18.44'

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.3'

    implementation 'org.slf4j:slf4j-api:2.0.18'
    implementation 'ch.qos.logback:logback-classic:1.5.18'

    testImplementation platform('org.junit:junit-bom:5.14.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.mockito:mockito-core:5.23.0'

    implementation 'com.google.guava:guava:33.5.0-jre'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

javafx {
    version = "25"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

application {
    mainClass = 'it.unicam.cs.mpgc.rpg125667.App'
    applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics']
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}